# BachelorThesis-PAB1_Task_with_biotrainer

./: .gitmodules  README.md  data_viz.py  env_model.py  environment.yml  evaluation_by_oracle.py  fasta_converter.py  file_upload.py  mcts_alphaZero_mutate_expand_m_p_gfp.py  p_v_net_3.py  pop_up.py  profiler_results.py  pyproject.toml  sequence_env_m_p.py  sequence_env_m_p2.py  train_m_single_m_p_pab1.py  utils.py
analysis/: visuals_histo.py  visuals_progression.py
data/: PAB1.txt  evoplay_enzyme.tsv
environment/: environment.yml
examples/data/: PAB1.txt  evoplay_enzyme.tsv
examples/results/: top_ten_sequences.csv
oracle_training/: config.yml  sequences.fasta
trial/: trial_emb.csv  trial_one_hot.csv  trial_one_hot_modified.csv  trial_one_hot_modified_8000.csv
