[tool.poetry]
name = "PAB1_GFP_task_Robert"
version = "0.8.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.26.3"
biotrainer = { path = "./biotrainer" }
matplotlib = "^3.8.2"
scipy = ">=1.11.2,<2.0.0"
scikit-learn = "^1.3.0"
tensorboard = "^2.14.1"
torch = "2.1.2"
torchmetrics = "^1.3.0"
transformers = "^4.37.2"
tqdm = ">=4.66.1,<5.0.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
